--- a/OLE_jupyternotebook/check_gradient.ipynb
+++ b/OLE_jupyternotebook/check_gradient.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 68,
    "id": "3d4115e5",
    "metadata": {},
    "outputs": [
@@ -20,14 +20,14 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.0875, -0.0827],\n",
-      "        [-0.0875,  0.0827]])\n",
-      "tensor([-0.0588,  0.0588])\n",
+      "tensor([[ 0.0499, -0.1001],\n",
+      "        [-0.0499,  0.1001]])\n",
+      "tensor([-0.0946,  0.0946])\n",
       "\n",
       "KL Divergence Loss Gradient:\n",
-      "tensor([[ 0.0875, -0.0827],\n",
-      "        [-0.0875,  0.0827]])\n",
-      "tensor([-0.0588,  0.0588])\n"
+      "tensor([[ 0.0499, -0.1001],\n",
+      "        [-0.0499,  0.1001]])\n",
+      "tensor([-0.0946,  0.0946])\n"
      ]
     }
    ],
@@ -82,17 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 69,
    "id": "6dd2a023",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.7403, grad_fn=<NllLossBackward>)"
+       "tensor(0.7227, grad_fn=<NllLossBackward>)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,17 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "id": "3bb44854",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.7403, grad_fn=<NllLossBackward>)"
+       "tensor(0.7227, grad_fn=<NllLossBackward>)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,48 +124,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 79,
    "id": "5698603e",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor(2.2209, grad_fn=<AddBackward0>)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(tensor([[ 0.1496, -0.3004],\n",
+      "        [-0.1496,  0.3004]]), tensor([-0.2838,  0.2838]))\n"
+     ]
     }
    ],
    "source": [
-    "total_loss = ce_loss + 2 * kl_loss\n",
-    "total_loss"
+    "total_loss = 2 * ce_loss +  kl_loss\n",
+    "total_loss\n",
+    "total_gradient = torch.autograd.grad(total_loss, model.parameters(), retain_graph=True)\n",
+    "print(total_gradient)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "b0e53d7c",
+   "execution_count": 80,
+   "id": "42595cdd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(tensor([[ 0.2626, -0.2482],\n",
-       "         [-0.2626,  0.2482]]),\n",
-       " tensor([-0.1763,  0.1763]))"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.1496, -0.3004],\n",
+      "        [-0.1496,  0.3004]])\n",
+      "tensor([-0.2838,  0.2838])\n"
+     ]
     }
    ],
    "source": [
-    "ce_gradient = torch.autograd.grad(total_loss, model.parameters(), retain_graph=True)\n",
-    "ce_gradient"
+    "names_grads_copy = {}\n",
+    "\n",
+    "for param_name, ce_grad, kl_grad in zip(model.parameters(), ce_gradient, kl_gradient):\n",
+    "    names_grads_copy[param_name] = torch.tensor(2) * ce_grad + kl_grad\n",
+    "    \n",
+    "for key, value in names_grads_copy.items():\n",
+    "    print(value)"
    ]
   },
   {
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 74,
    "id": "77c1fe23",
    "metadata": {},
    "outputs": [
@@ -186,9 +188,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.0875, -0.0827],\n",
-      "        [-0.0875,  0.0827]])\n",
-      "tensor([-0.0588,  0.0588])\n"
+      "tensor([[ 0.0499, -0.1001],\n",
+      "        [-0.0499,  0.1001]])\n",
+      "tensor([-0.0946,  0.0946])\n"
      ]
     }
    ],
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 75,
    "id": "3bdede2c",
    "metadata": {},
    "outputs": [
@@ -217,15 +219,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.0875, -0.0827],\n",
-      "        [-0.0875,  0.0827]])\n",
-      "tensor([-0.0588,  0.0588])\n",
-      "tensor([[ 0.0875, -0.0827],\n",
-      "        [-0.0875,  0.0827]])\n",
-      "tensor([-0.0588,  0.0588])\n",
-      "tensor([[ 0.0875, -0.0827],\n",
-      "        [-0.0875,  0.0827]])\n",
-      "tensor([-0.0588,  0.0588])\n"
+      "tensor([[ 0.0499, -0.1001],\n",
+      "        [-0.0499,  0.1001]])\n",
+      "tensor([-0.0946,  0.0946])\n",
+      "tensor([[ 0.0499, -0.1001],\n",
+      "        [-0.0499,  0.1001]])\n",
+      "tensor([-0.0946,  0.0946])\n",
+      "tensor([[ 0.0499, -0.1001],\n",
+      "        [-0.0499,  0.1001]])\n",
+      "tensor([-0.0946,  0.0946])\n"
      ]
     }
    ],
@@ -245,28 +247,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 76,
    "id": "31ef3c09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.0875, -0.0827],\n",
-       "         [-0.0875,  0.0827]]),\n",
-       " tensor([-0.0588,  0.0588]),\n",
-       " tensor([[ 0.0875, -0.0827],\n",
-       "         [-0.0875,  0.0827]]),\n",
-       " tensor([-0.0588,  0.0588]),\n",
-       " tensor([[ 0.0875, -0.0827],\n",
-       "         [-0.0875,  0.0827]]),\n",
-       " tensor([-0.0588,  0.0588]),\n",
-       " tensor([[ 0.0875, -0.0827],\n",
-       "         [-0.0875,  0.0827]]),\n",
-       " tensor([-0.0588,  0.0588]))"
+       "(tensor([[ 0.0499, -0.1001],\n",
+       "         [-0.0499,  0.1001]]),\n",
+       " tensor([-0.0946,  0.0946]),\n",
+       " tensor([[ 0.0499, -0.1001],\n",
+       "         [-0.0499,  0.1001]]),\n",
+       " tensor([-0.0946,  0.0946]),\n",
+       " tensor([[ 0.0499, -0.1001],\n",
+       "         [-0.0499,  0.1001]]),\n",
+       " tensor([-0.0946,  0.0946]),\n",
+       " tensor([[ 0.0499, -0.1001],\n",
+       "         [-0.0499,  0.1001]]),\n",
+       " tensor([-0.0946,  0.0946]))"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 77,
    "id": "a85ef497",
    "metadata": {},
    "outputs": [
@@ -294,9 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.2626, -0.2482],\n",
-      "        [-0.2626,  0.2482]])\n",
-      "tensor([-0.1763,  0.1763])\n"
+      "tensor([[ 0.1496, -0.3004],\n",
+      "        [-0.1496,  0.3004]])\n",
+      "tensor([-0.2838,  0.2838])\n"
      ]
     }
    ],
@@ -316,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 78,
    "id": "5dab046a",
    "metadata": {},
    "outputs": [
@@ -325,9 +327,9 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.2626, -0.2482],\n",
-      "        [-0.2626,  0.2482]])\n",
-      "tensor([-0.1763,  0.1763])\n"
+      "tensor([[ 0.1496, -0.3004],\n",
+      "        [-0.1496,  0.3004]])\n",
+      "tensor([-0.2838,  0.2838])\n"
      ]
     }
    ],
@@ -341,36 +343,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "42595cdd",
+   "execution_count": null,
+   "id": "fbc6b756",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(tensor([[ 0.0875, -0.0827],\n",
-      "        [-0.0875,  0.0827]]), tensor([-0.0588,  0.0588]))\n",
-      "++++++++++\n",
-      "tensor([[ 0.2626, -0.2482],\n",
-      "        [-0.2626,  0.2482]])\n",
-      "tensor([-0.1763,  0.1763])\n"
-     ]
-    }
-   ],
-   "source": [
-    "names_grads_copy = {}\n",
-    "\n",
-    "print(ce_gradient)\n",
-    "\n",
-    "print(\"+\"*10)\n",
-    "\n",
-    "for param_name, ce_grad, kl_grad in zip(model.parameters(), ce_gradient, kl_gradient):\n",
-    "    names_grads_copy[param_name] = torch.tensor(2) * ce_grad + kl_grad\n",
-    "    \n",
-    "for key, value in names_grads_copy.items():\n",
-    "    print(value)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
