--- a/OLE_jupyternotebook/check_gradient.ipynb
+++ b/OLE_jupyternotebook/check_gradient.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "id": "3d4115e5",
    "metadata": {},
    "outputs": [
@@ -20,20 +20,22 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.0499, -0.1001],\n",
-      "        [-0.0499,  0.1001]])\n",
-      "tensor([-0.0946,  0.0946])\n",
+      "tensor([[ 0.1332,  0.1642],\n",
+      "        [-0.1332, -0.1642]])\n",
+      "tensor([-0.0155,  0.0155])\n",
       "\n",
       "KL Divergence Loss Gradient:\n",
-      "tensor([[ 0.0499, -0.1001],\n",
-      "        [-0.0499,  0.1001]])\n",
-      "tensor([-0.0946,  0.0946])\n"
+      "tensor([[-0.1126, -0.0461],\n",
+      "        [ 0.1806, -0.0581]])\n",
+      "tensor([-0.2392, -0.5851])\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "# 예제 데이터 생성\n",
     "X = torch.randn(100, 2)\n",
@@ -59,12 +61,12 @@
     "outputs = model(X)\n",
     "\n",
     "# Cross Entropy Loss 계산\n",
-    "ce_loss = cross_entropy_loss(outputs, y)\n",
+    "ce_loss = F.cross_entropy(outputs, y)\n",
     "\n",
     "# KL Divergence Loss 계산\n",
     "p = torch.tensor([0.1, 0.2])  # 예시 분포\n",
     "kl_loss = kl_divergence_loss(torch.log(outputs), p)\n",
-    "kl_loss = ce_loss\n",
+    "# kl_loss = ce_loss\n",
     "\n",
     "# Gradient 계산 (torch.autograd.grad 사용)\n",
     "ce_gradient = torch.autograd.grad(ce_loss, model.parameters(), retain_graph=True)\n",
@@ -82,17 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "id": "6dd2a023",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.7227, grad_fn=<NllLossBackward>)"
+       "tensor(0.8478, grad_fn=<NllLossBackward0>)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,17 +105,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
+   "id": "ca975f21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(\"Output :\")\n",
+    "# print(outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3bb44854",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.7227, grad_fn=<NllLossBackward>)"
+       "tensor(nan, grad_fn=<DivBackward0>)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "id": "5698603e",
    "metadata": {},
    "outputs": [
@@ -132,13 +145,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([[ 0.1496, -0.3004],\n",
-      "        [-0.1496,  0.3004]]), tensor([-0.2838,  0.2838]))\n"
+      "(tensor([[ 0.1332,  0.1642],\n",
+      "        [-0.1332, -0.1642]]), tensor([-0.0155,  0.0155]))\n"
      ]
     }
    ],
    "source": [
-    "total_loss = 2 * ce_loss +  kl_loss\n",
+    "total_loss = 1 * ce_loss +  2* kl_loss\n",
+    "total_loss = 1 * ce_loss # +  2* kl_loss\n",
     "total_loss\n",
     "total_gradient = torch.autograd.grad(total_loss, model.parameters(), retain_graph=True)\n",
     "print(total_gradient)"
@@ -146,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "id": "42595cdd",
    "metadata": {},
    "outputs": [
@@ -154,9 +168,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.1496, -0.3004],\n",
-      "        [-0.1496,  0.3004]])\n",
-      "tensor([-0.2838,  0.2838])\n"
+      "tensor([[ 0.1332,  0.1642],\n",
+      "        [-0.1332, -0.1642]])\n",
+      "tensor([-0.0155,  0.0155])\n"
      ]
     }
    ],
@@ -164,7 +178,13 @@
     "names_grads_copy = {}\n",
     "\n",
     "for param_name, ce_grad, kl_grad in zip(model.parameters(), ce_gradient, kl_gradient):\n",
-    "    names_grads_copy[param_name] = torch.tensor(2) * ce_grad + kl_grad\n",
+    "    \n",
+    "    kl_grad = None\n",
+    "    \n",
+    "    if not kl_grad == None:\n",
+    "        names_grads_copy[param_name] = torch.tensor(1) * ce_grad + torch.tensor(2) *  kl_grad\n",
+    "    else:\n",
+    "        names_grads_copy[param_name] = torch.tensor(1) * ce_grad \n",
     "    \n",
     "for key, value in names_grads_copy.items():\n",
     "    print(value)"
@@ -180,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "id": "77c1fe23",
    "metadata": {},
    "outputs": [
@@ -188,9 +208,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.0499, -0.1001],\n",
-      "        [-0.0499,  0.1001]])\n",
-      "tensor([-0.0946,  0.0946])\n"
+      "tensor([[ 0.1332,  0.1642],\n",
+      "        [-0.1332, -0.1642]])\n",
+      "tensor([-0.0155,  0.0155])\n"
      ]
     }
    ],
@@ -211,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "id": "3bdede2c",
    "metadata": {},
    "outputs": [
@@ -219,15 +239,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.0499, -0.1001],\n",
-      "        [-0.0499,  0.1001]])\n",
-      "tensor([-0.0946,  0.0946])\n",
-      "tensor([[ 0.0499, -0.1001],\n",
-      "        [-0.0499,  0.1001]])\n",
-      "tensor([-0.0946,  0.0946])\n",
-      "tensor([[ 0.0499, -0.1001],\n",
-      "        [-0.0499,  0.1001]])\n",
-      "tensor([-0.0946,  0.0946])\n"
+      "tensor([[ 0.1332,  0.1642],\n",
+      "        [-0.1332, -0.1642]])\n",
+      "tensor([-0.0155,  0.0155])\n",
+      "tensor([[ 0.1332,  0.1642],\n",
+      "        [-0.1332, -0.1642]])\n",
+      "tensor([-0.0155,  0.0155])\n",
+      "tensor([[ 0.1332,  0.1642],\n",
+      "        [-0.1332, -0.1642]])\n",
+      "tensor([-0.0155,  0.0155])\n"
      ]
     }
    ],
@@ -247,28 +267,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "id": "31ef3c09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.0499, -0.1001],\n",
-       "         [-0.0499,  0.1001]]),\n",
-       " tensor([-0.0946,  0.0946]),\n",
-       " tensor([[ 0.0499, -0.1001],\n",
-       "         [-0.0499,  0.1001]]),\n",
-       " tensor([-0.0946,  0.0946]),\n",
-       " tensor([[ 0.0499, -0.1001],\n",
-       "         [-0.0499,  0.1001]]),\n",
-       " tensor([-0.0946,  0.0946]),\n",
-       " tensor([[ 0.0499, -0.1001],\n",
-       "         [-0.0499,  0.1001]]),\n",
-       " tensor([-0.0946,  0.0946]))"
+       "(tensor([[ 0.1332,  0.1642],\n",
+       "         [-0.1332, -0.1642]]),\n",
+       " tensor([-0.0155,  0.0155]),\n",
+       " tensor([[ 0.1332,  0.1642],\n",
+       "         [-0.1332, -0.1642]]),\n",
+       " tensor([-0.0155,  0.0155]),\n",
+       " tensor([[ 0.1332,  0.1642],\n",
+       "         [-0.1332, -0.1642]]),\n",
+       " tensor([-0.0155,  0.0155]),\n",
+       " tensor([[-0.1126, -0.0461],\n",
+       "         [ 0.1806, -0.0581]]),\n",
+       " tensor([-0.2392, -0.5851]))"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "id": "a85ef497",
    "metadata": {},
    "outputs": [
@@ -296,9 +316,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.1496, -0.3004],\n",
-      "        [-0.1496,  0.3004]])\n",
-      "tensor([-0.2838,  0.2838])\n"
+      "tensor([[ 0.3997,  0.4926],\n",
+      "        [-0.3997, -0.4926]])\n",
+      "tensor([-0.0465,  0.0465])\n"
      ]
     }
    ],
@@ -318,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "id": "5dab046a",
    "metadata": {},
    "outputs": [
@@ -327,9 +347,9 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.1496, -0.3004],\n",
-      "        [-0.1496,  0.3004]])\n",
-      "tensor([-0.2838,  0.2838])\n"
+      "tensor([[ 0.3997,  0.4926],\n",
+      "        [-0.3997, -0.4926]])\n",
+      "tensor([-0.0465,  0.0465])\n"
      ]
     }
    ],
@@ -366,7 +386,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.16"
   }
  },
  "nbformat": 4,
