--- a/OLE_jupyternotebook/check_gradient.ipynb
+++ b/OLE_jupyternotebook/check_gradient.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "id": "3d4115e5",
    "metadata": {},
    "outputs": [
@@ -20,14 +20,12 @@
      "output_type": "stream",
      "text": [
       "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.1332,  0.1642],\n",
-      "        [-0.1332, -0.1642]])\n",
-      "tensor([-0.0155,  0.0155])\n",
-      "\n",
-      "KL Divergence Loss Gradient:\n",
-      "tensor([[-0.1126, -0.0461],\n",
-      "        [ 0.1806, -0.0581]])\n",
-      "tensor([-0.2392, -0.5851])\n"
+      "tensor([[-0.0303,  0.0916],\n",
+      "        [-0.0042,  0.0128]])\n",
+      "tensor([0.3576, 0.0499])\n",
+      "tensor([[-0.0640, -0.0393],\n",
+      "        [ 0.0640,  0.0393]])\n",
+      "tensor([-0.2848,  0.2848])\n"
      ]
     }
    ],
@@ -46,9 +44,11 @@
     "    def __init__(self):\n",
     "        super(ClassificationModel, self).__init__()\n",
     "        self.fc1 = nn.Linear(2, 2)\n",
+    "        self.fc2 = nn.Linear(2, 2)\n",
     "    \n",
     "    def forward(self, x):\n",
     "        x = self.fc1(x)\n",
+    "        x = self.fc2(x)\n",
     "        return x\n",
     "\n",
     "model = ClassificationModel()\n",
@@ -77,82 +77,59 @@
     "for grad_param in ce_gradient:\n",
     "    print(grad_param)\n",
     "\n",
-    "print(\"\\nKL Divergence Loss Gradient:\")\n",
-    "for grad_param in kl_gradient:\n",
-    "    print(grad_param)"
+    "# print(\"\\nKL Divergence Loss Gradient:\")\n",
+    "# for grad_param in kl_gradient:\n",
+    "#     print(grad_param)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "6dd2a023",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.8478, grad_fn=<NllLossBackward0>)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ce_loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ca975f21",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(\"Output :\")\n",
-    "# print(outputs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3bb44854",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(nan, grad_fn=<DivBackward0>)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kl_loss"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5698603e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([[ 0.1332,  0.1642],\n",
-      "        [-0.1332, -0.1642]]), tensor([-0.0155,  0.0155]))\n"
+      "Cross Entropy Loss Gradient:\n",
+      "tensor([[-0.0607,  0.1832],\n",
+      "        [-0.0085,  0.0256]])\n",
+      "tensor([0.7153, 0.0998])\n",
+      "tensor([[-0.1280, -0.0787],\n",
+      "        [ 0.1280,  0.0787]])\n",
+      "tensor([-0.5695,  0.5695])\n"
      ]
     }
    ],
    "source": [
+    "ce_loss *= 2\n",
+    "ce_gradient = torch.autograd.grad(ce_loss, model.parameters(), retain_graph=True)\n",
+    "\n",
+    "# Gradient 확인\n",
+    "print(\"Cross Entropy Loss Gradient:\")\n",
+    "for grad_param in ce_gradient:\n",
+    "    print(grad_param)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bb44854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kl_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5698603e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "total_loss = 1 * ce_loss +  2* kl_loss\n",
-    "total_loss = 1 * ce_loss # +  2* kl_loss\n",
     "total_loss\n",
     "total_gradient = torch.autograd.grad(total_loss, model.parameters(), retain_graph=True)\n",
     "print(total_gradient)"
@@ -160,26 +137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "42595cdd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 0.1332,  0.1642],\n",
-      "        [-0.1332, -0.1642]])\n",
-      "tensor([-0.0155,  0.0155])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names_grads_copy = {}\n",
     "\n",
     "for param_name, ce_grad, kl_grad in zip(model.parameters(), ce_gradient, kl_gradient):\n",
     "    \n",
-    "    kl_grad = None\n",
+    "    #kl_grad = None\n",
     "    \n",
     "    if not kl_grad == None:\n",
     "        names_grads_copy[param_name] = torch.tensor(1) * ce_grad + torch.tensor(2) *  kl_grad\n",
@@ -200,20 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "77c1fe23",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 0.1332,  0.1642],\n",
-      "        [-0.1332, -0.1642]])\n",
-      "tensor([-0.0155,  0.0155])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ce_gradient = torch.autograd.grad(ce_loss, model.parameters(), retain_graph=True)\n",
     "for grad_param in ce_gradient:\n",
@@ -231,26 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3bdede2c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 0.1332,  0.1642],\n",
-      "        [-0.1332, -0.1642]])\n",
-      "tensor([-0.0155,  0.0155])\n",
-      "tensor([[ 0.1332,  0.1642],\n",
-      "        [-0.1332, -0.1642]])\n",
-      "tensor([-0.0155,  0.0155])\n",
-      "tensor([[ 0.1332,  0.1642],\n",
-      "        [-0.1332, -0.1642]])\n",
-      "tensor([-0.0155,  0.0155])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ce_gradient =  torch.tensor(3) * torch.autograd.grad(ce_loss, model.parameters(), retain_graph=True)\n",
     "for grad_param in ce_gradient:\n",
@@ -267,32 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "31ef3c09",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([[ 0.1332,  0.1642],\n",
-       "         [-0.1332, -0.1642]]),\n",
-       " tensor([-0.0155,  0.0155]),\n",
-       " tensor([[ 0.1332,  0.1642],\n",
-       "         [-0.1332, -0.1642]]),\n",
-       " tensor([-0.0155,  0.0155]),\n",
-       " tensor([[ 0.1332,  0.1642],\n",
-       "         [-0.1332, -0.1642]]),\n",
-       " tensor([-0.0155,  0.0155]),\n",
-       " tensor([[-0.1126, -0.0461],\n",
-       "         [ 0.1806, -0.0581]]),\n",
-       " tensor([-0.2392, -0.5851]))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_gradient = ce_gradient + kl_gradient\n",
     "total_gradient"
@@ -308,20 +227,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a85ef497",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 0.3997,  0.4926],\n",
-      "        [-0.3997, -0.4926]])\n",
-      "tensor([-0.0465,  0.0465])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ce_gradient =  torch.autograd.grad(torch.tensor(3) * ce_loss, model.parameters(), retain_graph=True)\n",
     "for grad_param in ce_gradient:\n",
@@ -338,21 +247,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5dab046a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross Entropy Loss Gradient:\n",
-      "tensor([[ 0.3997,  0.4926],\n",
-      "        [-0.3997, -0.4926]])\n",
-      "tensor([-0.0465,  0.0465])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Gradient 확인\n",
     "print(\"Cross Entropy Loss Gradient:\")\n",
