--- a/OLE_jupyternotebook/OLE.ipynb
+++ b/OLE_jupyternotebook/OLE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "cda16bea",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "869f1db4",
    "metadata": {},
    "outputs": [],
@@ -145,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "1d3b977c",
+   "execution_count": 38,
+   "id": "cbba0c38",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "id": "0123c723",
    "metadata": {},
    "outputs": [
@@ -269,6 +269,16 @@
     "        for param in self.parameters():\n",
     "            if param.requires_grad:\n",
     "                yield param\n",
+    "                \n",
+    "    def get_inner_loop_parameter_dict(self, params):\n",
+    "        \n",
+    "        param_dict = dict()\n",
+    "        for name, param in params:\n",
+    "            if param.requires_grad:\n",
+    "                param_dict[name] = param.to(device=device)\n",
+    "\n",
+    "        return param_dict\n",
+    "                \n",
     "        \n",
     "    def forward(self, x, y):\n",
     "        \n",
@@ -287,11 +297,19 @@
     "                            [1] + [1 for i in range(len(value.shape))]) for\n",
     "                        name, value in names_weights_copy.items()}\n",
     "        \n",
-    "        preds = self.classifier.forward(x, params=names_weights_copy, num_step=4)\n",
+    "        preds = self.classifier.forward(x, params=names_weights_copy, label=y, num_step=4)\n",
+    "        \n",
+    "        \n",
+    "        print(\"preds == \", preds)\n",
     "        \n",
     "        loss = F.cross_entropy(input=preds, target=y)\n",
     "        \n",
-    "        return loss, preds\n",
+    "        \n",
+    "        grads = torch.autograd.grad(loss, names_weights_copy.values(), allow_unused=True)\n",
+    "        \n",
+    "        \n",
+    "        return loss, preds, grads\n",
+    "    \n",
     "    \n",
     "\n",
     "model = MAMLFewShotClassifier(args=args, device=device, im_shape=(2, 3, args.image_height, args.image_width))"
@@ -299,11 +317,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "19e5f95a",
+   "execution_count": 47,
+   "id": "26061063",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "preds ==  (tensor([[-1.8017e+00,  1.5729e+00, -1.7459e+00,  4.2573e-02,  1.6444e+00],\n",
+      "        [-4.2895e+00,  7.6371e-01, -3.1353e+00,  2.3147e+00, -7.0321e-02],\n",
+      "        [-1.9116e+00,  8.5897e-01, -5.1459e-01, -2.9106e-01,  2.2475e-01],\n",
+      "        [-3.0528e+00,  2.0867e-01, -3.2818e+00,  1.1803e+00,  3.0848e+00],\n",
+      "        [-2.6788e+00,  1.3603e+00, -1.1568e+00,  6.7295e-02,  1.0021e+00],\n",
+      "        [-1.7062e-01,  6.1720e-01, -2.1559e+00,  9.9997e-01,  1.2348e+00],\n",
+      "        [-1.4104e+00,  1.8730e+00, -2.6200e+00,  3.0145e-01,  6.2916e-01],\n",
+      "        [-1.3554e-01, -1.1797e+00, -2.2811e+00,  1.3671e+00, -9.0685e-02],\n",
+      "        [-6.6618e-01, -4.6128e-01, -2.2296e+00,  1.9067e+00,  1.0700e+00],\n",
+      "        [-2.0651e+00,  6.4732e-02, -3.2230e-01,  1.6418e-01, -6.5449e-01],\n",
+      "        [-2.6879e+00,  5.3137e-01, -2.6987e+00,  8.6043e-01, -6.2171e-01],\n",
+      "        [-6.1310e-01, -2.6689e-01, -2.2061e+00,  7.1541e-01,  6.0186e-01],\n",
+      "        [-2.7209e+00,  8.6165e-01, -1.8286e+00, -9.4500e-01, -1.1977e+00],\n",
+      "        [-2.3251e+00,  4.5386e-01, -1.8936e+00,  8.7753e-02, -1.4197e+00],\n",
+      "        [-1.4857e-01, -2.0850e+00, -3.4061e+00,  3.3329e+00, -2.0780e-01],\n",
+      "        [-1.6602e+00, -1.0589e+00, -2.9906e+00,  5.8727e-01,  3.1491e-01],\n",
+      "        [-1.7160e+00,  9.6197e-01, -1.5036e+00,  1.3836e-01,  5.8429e-02],\n",
+      "        [-1.9209e+00, -2.9200e-01, -1.1572e+00,  3.9748e-01, -2.7030e-01],\n",
+      "        [-9.9175e-01,  3.8160e-03, -1.0195e+00, -4.9032e-01, -6.1718e-01],\n",
+      "        [-1.6482e-01, -7.6428e-01, -3.3742e+00, -1.1369e-01,  3.8754e-01],\n",
+      "        [-3.5506e+00, -1.1188e+00, -3.1191e+00,  1.4357e+00,  8.2421e-02],\n",
+      "        [-2.7649e+00,  1.2465e+00, -1.9303e+00,  5.4088e-01,  8.9222e-01],\n",
+      "        [-1.0347e+00,  4.3723e-01, -6.0136e-01,  1.1537e+00, -1.0877e+00],\n",
+      "        [-3.3487e+00,  9.7030e-02, -2.7912e+00,  2.3972e+00, -6.5126e-02],\n",
+      "        [-2.1536e+00,  4.2536e-01, -9.4447e-01,  6.2959e-01, -5.0727e-01]],\n",
+      "       device='cuda:0', grad_fn=<AddmmBackward0>), tensor([[ 0.2887,  0.2423,  1.0282,  ...,  0.9190,  0.2710,  1.2539],\n",
+      "        [ 0.3042,  0.6119,  0.9257,  ...,  0.4538,  0.4645,  0.8667],\n",
+      "        [ 0.7789,  1.3184,  2.4357,  ...,  0.4575,  0.2125,  0.9998],\n",
+      "        ...,\n",
+      "        [ 1.0630,  2.3481,  1.7428,  ...,  0.4764,  0.5487,  1.5232],\n",
+      "        [ 0.1737,  1.0750,  0.7586,  ..., -0.0032, -0.0105,  1.6073],\n",
+      "        [ 1.5956,  1.0913,  1.0641,  ...,  0.6637,  0.6914,  1.4791]],\n",
+      "       device='cuda:0', grad_fn=<ViewBackward0>), tensor([[-1.8017e+00,  1.5729e+00, -1.7459e+00,  4.2573e-02,  1.6444e+00],\n",
+      "        [-4.2895e+00,  7.6371e-01, -3.1353e+00,  2.3147e+00, -7.0321e-02],\n",
+      "        [-1.9116e+00,  8.5897e-01, -5.1459e-01, -2.9106e-01,  2.2475e-01],\n",
+      "        [-3.0528e+00,  2.0867e-01, -3.2818e+00,  1.1803e+00,  3.0848e+00],\n",
+      "        [-2.6788e+00,  1.3603e+00, -1.1568e+00,  6.7295e-02,  1.0021e+00],\n",
+      "        [-1.7062e-01,  6.1720e-01, -2.1559e+00,  9.9997e-01,  1.2348e+00],\n",
+      "        [-1.4104e+00,  1.8730e+00, -2.6200e+00,  3.0145e-01,  6.2916e-01],\n",
+      "        [-1.3554e-01, -1.1797e+00, -2.2811e+00,  1.3671e+00, -9.0685e-02],\n",
+      "        [-6.6618e-01, -4.6128e-01, -2.2296e+00,  1.9067e+00,  1.0700e+00],\n",
+      "        [-2.0651e+00,  6.4732e-02, -3.2230e-01,  1.6418e-01, -6.5449e-01],\n",
+      "        [-2.6879e+00,  5.3137e-01, -2.6987e+00,  8.6043e-01, -6.2171e-01],\n",
+      "        [-6.1310e-01, -2.6689e-01, -2.2061e+00,  7.1541e-01,  6.0186e-01],\n",
+      "        [-2.7209e+00,  8.6165e-01, -1.8286e+00, -9.4500e-01, -1.1977e+00],\n",
+      "        [-2.3251e+00,  4.5386e-01, -1.8936e+00,  8.7753e-02, -1.4197e+00],\n",
+      "        [-1.4857e-01, -2.0850e+00, -3.4061e+00,  3.3329e+00, -2.0780e-01],\n",
+      "        [-1.6602e+00, -1.0589e+00, -2.9906e+00,  5.8727e-01,  3.1491e-01],\n",
+      "        [-1.7160e+00,  9.6197e-01, -1.5036e+00,  1.3836e-01,  5.8429e-02],\n",
+      "        [-1.9209e+00, -2.9200e-01, -1.1572e+00,  3.9748e-01, -2.7030e-01],\n",
+      "        [-9.9175e-01,  3.8160e-03, -1.0195e+00, -4.9032e-01, -6.1718e-01],\n",
+      "        [-1.6482e-01, -7.6428e-01, -3.3742e+00, -1.1369e-01,  3.8754e-01],\n",
+      "        [-3.5506e+00, -1.1188e+00, -3.1191e+00,  1.4357e+00,  8.2421e-02],\n",
+      "        [-2.7649e+00,  1.2465e+00, -1.9303e+00,  5.4088e-01,  8.9222e-01],\n",
+      "        [-1.0347e+00,  4.3723e-01, -6.0136e-01,  1.1537e+00, -1.0877e+00],\n",
+      "        [-3.3487e+00,  9.7030e-02, -2.7912e+00,  2.3972e+00, -6.5126e-02],\n",
+      "        [-2.1536e+00,  4.2536e-01, -9.4447e-01,  6.2959e-01, -5.0727e-01]],\n",
+      "       device='cuda:0', grad_fn=<AddmmBackward0>))\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cross_entropy_loss(): argument 'input' (position 1) must be Tensor, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_27920\\666101169.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpreds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrads\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnet_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtargets\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_27920\\1301266774.py\u001b[0m in \u001b[0;36mnet_forward\u001b[1;34m(self, x, y)\u001b[0m\n\u001b[0;32m     56\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"preds == \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpreds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m         \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcross_entropy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpreds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\maml\\lib\\site-packages\\torch\\nn\\functional.py\u001b[0m in \u001b[0;36mcross_entropy\u001b[1;34m(input, target, weight, size_average, ignore_index, reduce, reduction, label_smoothing)\u001b[0m\n\u001b[0;32m   3024\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0msize_average\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mreduce\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3025\u001b[0m         \u001b[0mreduction\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlegacy_get_string\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msize_average\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreduce\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3026\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcross_entropy_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabel_smoothing\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3027\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3028\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: cross_entropy_loss(): argument 'input' (position 1) must be Tensor, not tuple"
+     ]
+    }
+   ],
+   "source": [
+    "loss, preds, grads = model.net_forward(images, targets)"
+   ]
   }
  ],
  "metadata": {
