Gradient rate 실험결과

--- a/Test_jupyternotebook/SVD.ipynb
+++ b/Test_jupyternotebook/SVD.ipynb
@@ -624,6 +624,22 @@
     "print(\"특이값 대각성분 : \")\n",
     "print(s_diag)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6f08d81",
+   "metadata": {},
+   "source": [
+    "## 3. low rank approximation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82437160",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
