--- a/Test_jupyternotebook/MAML_norm_analysis.ipynb
+++ b/Test_jupyternotebook/MAML_norm_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "5519a5e0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "8dbec5f2",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "norm_info = pd.read_csv('../MAML_JM/MAML_JM.csv')\n",
+    "norm_info = pd.read_csv('../experiment_result/MAML_JM/MAML_JM.csv')\n",
     "norm_info_train= norm_info[norm_info['phase']=='train']\n",
     "norm_info_val= norm_info[norm_info['phase']=='val']\n",
     "norm_info_test= norm_info[norm_info['current_iter']=='test']\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "fcdc6b27",
    "metadata": {},
    "outputs": [
@@ -56,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "448abd14",
+   "execution_count": 25,
+   "id": "ceaab840",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "9de1e562",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "8a24f255",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "id": "d60b8157",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "7891c290",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "23388752",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "843d019d",
    "metadata": {},
    "outputs": [
